...
            .onAppear {
                current = chatHistory.first
            }
            .toolbar {
                ToolbarItem(placement: .navigation) {
                    Button("New Chat", systemImage: "plus.app", action: addItem)
                        .accessibilityLabel("new chat button")
                }
            }
        } detail: {
            // Detail View
            if let selectedItem = current {
                ChatView(chat: selectedItem)
            } else {
                Text("Add a new chat")
            }
        }.navigationTitle("Chat")
    }
    
    private func addItem() {
        let newChat = Chat()
        withAnimation {
            modelContext.insert(newChat)
...
