...
                }
#if MAC_OS
                .onModifierKeysChanged {old, new in
                    shiftPressed = new.contains(.shift)
                }
#endif
            Button("Send", systemImage: "paperplane") {
                submitText()
            }
            .buttonStyle(.plain)
            .frame(minHeight: 40)
            .padding(.trailing, 15)
            .disabled(disableSubmit || inputValue.isEmpty)
...
